--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,1 @@
-# 生产环境，通常由 CI/CD 自动配置
-# 本地开发环境，所有开发分支都使用这个配置
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+# 建议仅在 CI/CD 中设置环境变量，而非使用此文件。
