--- a/.aliyun/s.yaml
+++ b/.aliyun/s.yaml
@@ -22,7 +22,7 @@ resources:
               echo "Standalone mode already configured"
             fi
           path: ./
-        - run: export PATH=/usr/local/versions/node/v20.8.1/bin:$PATH && npm install
+        - run: export PATH=/usr/local/versions/node/v20.8.1/bin:$PATH && npm install --prod
           path: ./
         - run: export PATH=/usr/local/versions/node/v20.8.1/bin:$PATH && npm run build
           path: ./
