--- a/cicd.yaml
+++ b/cicd.yaml
@@ -1,9 +1,6 @@
+# 阿里云部署，如果需要直接将仓库接入即可。
 kind: Pipeline
 name: pipeline-run-<%.releaseVersion%>
-labels:
-  accountId: '1011061961683543'
-  appName: next-template
-  envName: next-template-production
 spec:
   context:
     data:
@@ -11,30 +8,24 @@ spec:
   templateSpec:
     context:
       data:
-        dingdingNotification:
-          enable: false
-          message:
-            at:
-              isAtAll: false
-            msgtype: text
-          skipOnSuccess: false
         envName: next-template-production
         appName: next-template
         deployFile: s.yaml
     tasks:
-      - name: build-and-deploy
-        context:
+      - context:
           data:
-            displayName: "构建部署"
+            displayName: 构建部署
             enable: true
             steps:
-              - plugin: "@serverless-cd/s-setup"
-              - plugin: "@serverless-cd/runtime-setup"
+              - plugin: '@serverless-cd/s-setup'
+              - plugin: '@serverless-cd/runtime-setup'
                 inputs:
                   runtime:
-                  - nodejs20
-              - plugin: "@serverless-cd/checkout"
-              - plugin: "@serverless-cd/s-deploy"
+                    - nodejs20
+              - plugin: '@serverless-cd/checkout'
+              - plugin: '@serverless-cd/s-deploy'
                 inputs:
                   debugMode: true
+        name: build-and-deploy
+        runAfters: []
         taskTemplate: serverless-runner-task
