chore: add dynamic env.

--- a/s.yaml
+++ b/s.yaml
@@ -13,6 +13,8 @@ resources:
     component: fc3
     actions:
       pre-deploy:
+        - run: echo "NEXT_PUBLIC_SUPABASE_URL: ${env("NEXT_PUBLIC_SUPABASE_URL")}" && echo node -v
+          path: ./
         - run: |
             echo "Configuring for Alibaba Cloud FC deployment with standalone mode..."
             if ! grep -q "output.*standalone" next.config.ts; then
@@ -43,6 +45,8 @@ resources:
       layers:
         - acs:fc:${vars.region}:official:layers/Nodejs20/versions/1
       environmentVariables:
+        NEXT_PUBLIC_SUPABASE_URL: ${env("NEXT_PUBLIC_SUPABASE_URL")}
+        NEXT_PUBLIC_SUPABASE_ANON_KEY: ${env("NEXT_PUBLIC_SUPABASE_ANON_KEY")}
         PATH: >-
           /opt/nodejs20/bin:/usr/local/bin/apache-maven/bin:/usr/local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/ruby/bin
       customRuntimeConfig:
