--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.10",
     "@tanstack/eslint-plugin-query": "^5.78.0",
     "@tanstack/react-query": "^5.80.5",
     "@tanstack/react-query-devtools": "^5.80.2",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/table-core": "^8.21.3",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
@@ -35,6 +36,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/crypto-js": "^4.2.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
